24 January 2014: Wouter
	- Change unbound-event.h to use void* buffer, length idiom.
	- iana portlist updated.
	- unbound-event.h is installed if you configure --enable-event-api.
	- speed up unbound (reports say it could be up to 10%), by reducing
	  lock contention on localzones.lock.  It is changed to an rwlock.
	- so-reuseport: yesno option to distribute queries evenly over
	  threads on Linux (Thanks Robert Edmonds).
	- made lint clean.

21 January 2014: Wouter
	- Fix #547: no trustanchor written if filesystem full, fclose checked.

17 January 2014: Wouter
	- Fix isprint() portability in sldns, uses unsigned int.
	- iana portlist updated.

16 January 2014: Wouter
	- fix #544: Fixed +i causes segfault when running with module conf
	  "iterator".
	- Windows port, adjust %lld to %I64d, and warning in win_event.c.

14 January 2014: Wouter
	- iana portlist updated.

5 Dec 2013: Wouter
	- Fix bug in cachedump that uses sldns.
	- update pythonmod for ldns_ to sldns_ name change.

3 Dec 2013: Wouter
	- Fix sldns to use sldns_ prefix for all ldns_ variables.
	- Fix windows compile to compile with sldns.

30 Nov 2013: Wouter
	- Fix sldns to make globals use sldns_ prefix.  This fixes
	  linking with libldns that uses global variables ldns_ .

13 Nov 2013: Wouter
	- Fix bug#537: compile python plugin without ldns library.

12 Nov 2013: Wouter
	- Fix bug#536: acl_deny_non_local and refuse_non_local added.

5 Nov 2013: Wouter
	- Patch from Neel Goyal to fix async id assignment if callback
	  is called by libunbound in the mesh attach.
	- Accept ip-address: as an alternative for interface: for
	  consistency with nsd.conf syntax.

4 Nov 2013: Wouter
	- Patch from Neel Goyal to fix callback in libunbound.

3 Nov 2013: Wouter
	- if configured --with-libunbound-only fix make install.

31 Oct 2013: Wouter
	- Fix #531: Set SO_REUSEADDR so that the wildcard interface and a 
	  more specific interface port 53 can be used at the same time, and
	  one of the daemons is unbound.